[package]
name = "excel-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
futures = "0.3.26"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
umya-spreadsheet = "0.8.7"
voyager = { version = "0.2.1", features = ["tokio"] }
